# codeforces_downloader

./: .gitignore  README.md  pyproject.toml
codeforces_downloader/: __main__.py  downloader.py  ui.py  utils.py
tests/: test_codeforces_downloader.py
