[tool.poetry]
name = "codeforces_downloader"
version = "0.1.0"
description = ""
authors = ["jasonxie <x5758x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyquery = "^1.4.3"
gradio = "^3.0.17"
requests = "^2.28.0"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.1.0"
isort = "^5.10.1"
ipython = "^8.4.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
